add user class with views

--- a/Contact/appsettings.json
+++ b/Contact/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     // "DefaultConnection": "Server=union-pc11;User ID=sa;PWD=123456;Database=aspnet-Contact;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Persist Security Info=False;Data Source=union-pc200;User ID=sa;pwd=;Database=aspnet-Contact"
+    //"DefaultConnection": "Persist Security Info=False;Data Source=union-pc200;User ID=sa;pwd=123456;Database=aspnet-Contact"
+    "DefaultConnection": "data source=.;initial catalog=aspnet-Contact;persist security info=True;Integrated Security=SSPI;"
 
   },
   "Logging": {
